Update Terraform to the latest API definition

--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,8 @@ docs/data-sources/external_metadata.md linguist-generated=true
 docs/data-sources/external_metadatas.md linguist-generated=true
 docs/data-sources/feature_engineering_feature.md linguist-generated=true
 docs/data-sources/feature_engineering_features.md linguist-generated=true
+docs/data-sources/feature_engineering_materialized_feature.md linguist-generated=true
+docs/data-sources/feature_engineering_materialized_features.md linguist-generated=true
 docs/data-sources/materialized_features_feature_tag.md linguist-generated=true
 docs/data-sources/materialized_features_feature_tags.md linguist-generated=true
 docs/data-sources/online_store.md linguist-generated=true
@@ -63,6 +65,7 @@ docs/resources/database_synced_database_table.md linguist-generated=true
 docs/resources/entity_tag_assignment.md linguist-generated=true
 docs/resources/external_metadata.md linguist-generated=true
 docs/resources/feature_engineering_feature.md linguist-generated=true
+docs/resources/feature_engineering_materialized_feature.md linguist-generated=true
 docs/resources/materialized_features_feature_tag.md linguist-generated=true
 docs/resources/online_store.md linguist-generated=true
 docs/resources/policy_info.md linguist-generated=true
@@ -124,6 +127,9 @@ internal/providers/pluginfw/products/external_metadata/resource_external_metadat
 internal/providers/pluginfw/products/feature_engineering_feature/data_feature_engineering_feature.go linguist-generated=true
 internal/providers/pluginfw/products/feature_engineering_feature/data_feature_engineering_features.go linguist-generated=true
 internal/providers/pluginfw/products/feature_engineering_feature/resource_feature_engineering_feature.go linguist-generated=true
+internal/providers/pluginfw/products/feature_engineering_materialized_feature/data_feature_engineering_materialized_feature.go linguist-generated=true
+internal/providers/pluginfw/products/feature_engineering_materialized_feature/data_feature_engineering_materialized_features.go linguist-generated=true
+internal/providers/pluginfw/products/feature_engineering_materialized_feature/resource_feature_engineering_materialized_feature.go linguist-generated=true
 internal/providers/pluginfw/products/materialized_features_feature_tag/data_materialized_features_feature_tag.go linguist-generated=true
 internal/providers/pluginfw/products/materialized_features_feature_tag/data_materialized_features_feature_tags.go linguist-generated=true
 internal/providers/pluginfw/products/materialized_features_feature_tag/resource_materialized_features_feature_tag.go linguist-generated=true
@@ -163,6 +169,8 @@ internal/providers/pluginfw/tfschema/map_attribute.go linguist-generated=true
 internal/providers/pluginfw/tfschema/map_nested_attribute.go linguist-generated=true
 internal/providers/pluginfw/tfschema/nested_attribute_object.go linguist-generated=true
 internal/providers/pluginfw/tfschema/nested_block_object.go linguist-generated=true
+internal/providers/pluginfw/tfschema/set_attribute.go linguist-generated=true
+internal/providers/pluginfw/tfschema/set_nested_attribute.go linguist-generated=true
 internal/providers/pluginfw/tfschema/single_nested_attribute.go linguist-generated=true
 internal/providers/pluginfw/tfschema/single_nested_block.go linguist-generated=true
 internal/providers/pluginfw/tfschema/string_attribute.go linguist-generated=true
