--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,8 @@ docs/data-sources/external_metadata.md linguist-generated=true
 docs/data-sources/external_metadatas.md linguist-generated=true
 docs/data-sources/feature_engineering_feature.md linguist-generated=true
 docs/data-sources/feature_engineering_features.md linguist-generated=true
+docs/data-sources/feature_engineering_kafka_config.md linguist-generated=true
+docs/data-sources/feature_engineering_kafka_configs.md linguist-generated=true
 docs/data-sources/feature_engineering_materialized_feature.md linguist-generated=true
 docs/data-sources/feature_engineering_materialized_features.md linguist-generated=true
 docs/data-sources/materialized_features_feature_tag.md linguist-generated=true
@@ -65,6 +67,7 @@ docs/resources/database_synced_database_table.md linguist-generated=true
 docs/resources/entity_tag_assignment.md linguist-generated=true
 docs/resources/external_metadata.md linguist-generated=true
 docs/resources/feature_engineering_feature.md linguist-generated=true
+docs/resources/feature_engineering_kafka_config.md linguist-generated=true
 docs/resources/feature_engineering_materialized_feature.md linguist-generated=true
 docs/resources/materialized_features_feature_tag.md linguist-generated=true
 docs/resources/online_store.md linguist-generated=true
@@ -127,6 +130,9 @@ internal/providers/pluginfw/products/external_metadata/resource_external_metadat
 internal/providers/pluginfw/products/feature_engineering_feature/data_feature_engineering_feature.go linguist-generated=true
 internal/providers/pluginfw/products/feature_engineering_feature/data_feature_engineering_features.go linguist-generated=true
 internal/providers/pluginfw/products/feature_engineering_feature/resource_feature_engineering_feature.go linguist-generated=true
+internal/providers/pluginfw/products/feature_engineering_kafka_config/data_feature_engineering_kafka_config.go linguist-generated=true
+internal/providers/pluginfw/products/feature_engineering_kafka_config/data_feature_engineering_kafka_configs.go linguist-generated=true
+internal/providers/pluginfw/products/feature_engineering_kafka_config/resource_feature_engineering_kafka_config.go linguist-generated=true
 internal/providers/pluginfw/products/feature_engineering_materialized_feature/data_feature_engineering_materialized_feature.go linguist-generated=true
 internal/providers/pluginfw/products/feature_engineering_materialized_feature/data_feature_engineering_materialized_features.go linguist-generated=true
 internal/providers/pluginfw/products/feature_engineering_materialized_feature/resource_feature_engineering_materialized_feature.go linguist-generated=true
