--- a/.gitattributes
+++ b/.gitattributes
@@ -51,6 +51,8 @@ docs/data-sources/service_principal_federation_policies.md linguist-generated=tr
 docs/data-sources/service_principal_federation_policy.md linguist-generated=true
 docs/data-sources/tag_policies.md linguist-generated=true
 docs/data-sources/tag_policy.md linguist-generated=true
+docs/data-sources/workspace_entity_tag_assignment.md linguist-generated=true
+docs/data-sources/workspace_entity_tag_assignments.md linguist-generated=true
 docs/data-sources/workspace_network_option.md linguist-generated=true
 docs/data-sources/workspace_setting_v2.md linguist-generated=true
 docs/resources/account_federation_policy.md linguist-generated=true
@@ -76,6 +78,7 @@ docs/resources/quality_monitor_v2.md linguist-generated=true
 docs/resources/rfa_access_request_destinations.md linguist-generated=true
 docs/resources/service_principal_federation_policy.md linguist-generated=true
 docs/resources/tag_policy.md linguist-generated=true
+docs/resources/workspace_entity_tag_assignment.md linguist-generated=true
 docs/resources/workspace_network_option.md linguist-generated=true
 docs/resources/workspace_setting_v2.md linguist-generated=true
 internal/providers/common/common.go linguist-generated=true
@@ -156,6 +159,9 @@ internal/providers/pluginfw/products/service_principal_federation_policy/resourc
 internal/providers/pluginfw/products/tag_policy/data_tag_policies.go linguist-generated=true
 internal/providers/pluginfw/products/tag_policy/data_tag_policy.go linguist-generated=true
 internal/providers/pluginfw/products/tag_policy/resource_tag_policy.go linguist-generated=true
+internal/providers/pluginfw/products/workspace_entity_tag_assignment/data_workspace_entity_tag_assignment.go linguist-generated=true
+internal/providers/pluginfw/products/workspace_entity_tag_assignment/data_workspace_entity_tag_assignments.go linguist-generated=true
+internal/providers/pluginfw/products/workspace_entity_tag_assignment/resource_workspace_entity_tag_assignment.go linguist-generated=true
 internal/providers/pluginfw/products/workspace_network_option/data_workspace_network_option.go linguist-generated=true
 internal/providers/pluginfw/products/workspace_network_option/resource_workspace_network_option.go linguist-generated=true
 internal/providers/pluginfw/products/workspace_setting_v2/data_workspace_setting_v2.go linguist-generated=true
