--- a/.gitattributes
+++ b/.gitattributes
@@ -44,6 +44,12 @@ docs/data-sources/online_store.md linguist-generated=true
 docs/data-sources/online_stores.md linguist-generated=true
 docs/data-sources/policy_info.md linguist-generated=true
 docs/data-sources/policy_infos.md linguist-generated=true
+docs/data-sources/postgres_branch.md linguist-generated=true
+docs/data-sources/postgres_branches.md linguist-generated=true
+docs/data-sources/postgres_endpoint.md linguist-generated=true
+docs/data-sources/postgres_endpoints.md linguist-generated=true
+docs/data-sources/postgres_project.md linguist-generated=true
+docs/data-sources/postgres_projects.md linguist-generated=true
 docs/data-sources/quality_monitor_v2.md linguist-generated=true
 docs/data-sources/quality_monitors_v2.md linguist-generated=true
 docs/data-sources/rfa_access_request_destinations.md linguist-generated=true
@@ -74,6 +80,9 @@ docs/resources/feature_engineering_materialized_feature.md linguist-generated=tr
 docs/resources/materialized_features_feature_tag.md linguist-generated=true
 docs/resources/online_store.md linguist-generated=true
 docs/resources/policy_info.md linguist-generated=true
+docs/resources/postgres_branch.md linguist-generated=true
+docs/resources/postgres_endpoint.md linguist-generated=true
+docs/resources/postgres_project.md linguist-generated=true
 docs/resources/quality_monitor_v2.md linguist-generated=true
 docs/resources/rfa_access_request_destinations.md linguist-generated=true
 docs/resources/service_principal_federation_policy.md linguist-generated=true
@@ -148,6 +157,15 @@ internal/providers/pluginfw/products/online_store/resource_online_store.go lingu
 internal/providers/pluginfw/products/policy_info/data_policy_info.go linguist-generated=true
 internal/providers/pluginfw/products/policy_info/data_policy_infos.go linguist-generated=true
 internal/providers/pluginfw/products/policy_info/resource_policy_info.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_branch/data_postgres_branch.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_branch/data_postgres_branches.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_branch/resource_postgres_branch.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_endpoint/data_postgres_endpoint.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_endpoint/data_postgres_endpoints.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_endpoint/resource_postgres_endpoint.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_project/data_postgres_project.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_project/data_postgres_projects.go linguist-generated=true
+internal/providers/pluginfw/products/postgres_project/resource_postgres_project.go linguist-generated=true
 internal/providers/pluginfw/products/quality_monitor_v2/data_quality_monitor_v2.go linguist-generated=true
 internal/providers/pluginfw/products/quality_monitor_v2/data_quality_monitors_v2.go linguist-generated=true
 internal/providers/pluginfw/products/quality_monitor_v2/resource_quality_monitor_v2.go linguist-generated=true
@@ -221,6 +239,8 @@ internal/service/oauth2_tf/legacy_model.go linguist-generated=true
 internal/service/oauth2_tf/model.go linguist-generated=true
 internal/service/pipelines_tf/legacy_model.go linguist-generated=true
 internal/service/pipelines_tf/model.go linguist-generated=true
+internal/service/postgres_tf/legacy_model.go linguist-generated=true
+internal/service/postgres_tf/model.go linguist-generated=true
 internal/service/provisioning_tf/legacy_model.go linguist-generated=true
 internal/service/provisioning_tf/model.go linguist-generated=true
 internal/service/qualitymonitorv2_tf/legacy_model.go linguist-generated=true
