--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@ docs/data-sources/account_federation_policies.md linguist-generated=true
 docs/data-sources/account_federation_policy.md linguist-generated=true
 docs/data-sources/account_network_policies.md linguist-generated=true
 docs/data-sources/account_network_policy.md linguist-generated=true
+docs/data-sources/account_setting_user_preference_v2.md linguist-generated=true
 docs/data-sources/account_setting_v2.md linguist-generated=true
 docs/data-sources/alert_v2.md linguist-generated=true
 docs/data-sources/alerts_v2.md linguist-generated=true
@@ -57,12 +58,15 @@ docs/data-sources/service_principal_federation_policies.md linguist-generated=tr
 docs/data-sources/service_principal_federation_policy.md linguist-generated=true
 docs/data-sources/tag_policies.md linguist-generated=true
 docs/data-sources/tag_policy.md linguist-generated=true
+docs/data-sources/warehouses_default_warehouse_override.md linguist-generated=true
+docs/data-sources/warehouses_default_warehouse_overrides.md linguist-generated=true
 docs/data-sources/workspace_entity_tag_assignment.md linguist-generated=true
 docs/data-sources/workspace_entity_tag_assignments.md linguist-generated=true
 docs/data-sources/workspace_network_option.md linguist-generated=true
 docs/data-sources/workspace_setting_v2.md linguist-generated=true
 docs/resources/account_federation_policy.md linguist-generated=true
 docs/resources/account_network_policy.md linguist-generated=true
+docs/resources/account_setting_user_preference_v2.md linguist-generated=true
 docs/resources/account_setting_v2.md linguist-generated=true
 docs/resources/alert_v2.md linguist-generated=true
 docs/resources/apps_settings_custom_template.md linguist-generated=true
@@ -87,6 +91,7 @@ docs/resources/quality_monitor_v2.md linguist-generated=true
 docs/resources/rfa_access_request_destinations.md linguist-generated=true
 docs/resources/service_principal_federation_policy.md linguist-generated=true
 docs/resources/tag_policy.md linguist-generated=true
+docs/resources/warehouses_default_warehouse_override.md linguist-generated=true
 docs/resources/workspace_entity_tag_assignment.md linguist-generated=true
 docs/resources/workspace_network_option.md linguist-generated=true
 docs/resources/workspace_setting_v2.md linguist-generated=true
@@ -107,6 +112,8 @@ internal/providers/pluginfw/products/account_federation_policy/resource_account_
 internal/providers/pluginfw/products/account_network_policy/data_account_network_policies.go linguist-generated=true
 internal/providers/pluginfw/products/account_network_policy/data_account_network_policy.go linguist-generated=true
 internal/providers/pluginfw/products/account_network_policy/resource_account_network_policy.go linguist-generated=true
+internal/providers/pluginfw/products/account_setting_user_preference_v2/data_account_setting_user_preference_v2.go linguist-generated=true
+internal/providers/pluginfw/products/account_setting_user_preference_v2/resource_account_setting_user_preference_v2.go linguist-generated=true
 internal/providers/pluginfw/products/account_setting_v2/data_account_setting_v2.go linguist-generated=true
 internal/providers/pluginfw/products/account_setting_v2/resource_account_setting_v2.go linguist-generated=true
 internal/providers/pluginfw/products/alert_v2/data_alert_v2.go linguist-generated=true
@@ -177,6 +184,9 @@ internal/providers/pluginfw/products/service_principal_federation_policy/resourc
 internal/providers/pluginfw/products/tag_policy/data_tag_policies.go linguist-generated=true
 internal/providers/pluginfw/products/tag_policy/data_tag_policy.go linguist-generated=true
 internal/providers/pluginfw/products/tag_policy/resource_tag_policy.go linguist-generated=true
+internal/providers/pluginfw/products/warehouses_default_warehouse_override/data_warehouses_default_warehouse_override.go linguist-generated=true
+internal/providers/pluginfw/products/warehouses_default_warehouse_override/data_warehouses_default_warehouse_overrides.go linguist-generated=true
+internal/providers/pluginfw/products/warehouses_default_warehouse_override/resource_warehouses_default_warehouse_override.go linguist-generated=true
 internal/providers/pluginfw/products/workspace_entity_tag_assignment/data_workspace_entity_tag_assignment.go linguist-generated=true
 internal/providers/pluginfw/products/workspace_entity_tag_assignment/data_workspace_entity_tag_assignments.go linguist-generated=true
 internal/providers/pluginfw/products/workspace_entity_tag_assignment/resource_workspace_entity_tag_assignment.go linguist-generated=true
