--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,8 @@ docs/data-sources/alert_v2.md linguist-generated=true
 docs/data-sources/alerts_v2.md linguist-generated=true
 docs/data-sources/apps_settings_custom_template.md linguist-generated=true
 docs/data-sources/apps_settings_custom_templates.md linguist-generated=true
+docs/data-sources/apps_space.md linguist-generated=true
+docs/data-sources/apps_spaces.md linguist-generated=true
 docs/data-sources/budget_policies.md linguist-generated=true
 docs/data-sources/budget_policy.md linguist-generated=true
 docs/data-sources/data_quality_monitor.md linguist-generated=true
@@ -29,6 +31,8 @@ docs/data-sources/database_instance.md linguist-generated=true
 docs/data-sources/database_instances.md linguist-generated=true
 docs/data-sources/database_synced_database_table.md linguist-generated=true
 docs/data-sources/database_synced_database_tables.md linguist-generated=true
+docs/data-sources/endpoint.md linguist-generated=true
+docs/data-sources/endpoints.md linguist-generated=true
 docs/data-sources/entity_tag_assignment.md linguist-generated=true
 docs/data-sources/entity_tag_assignments.md linguist-generated=true
 docs/data-sources/external_metadata.md linguist-generated=true
@@ -70,12 +74,14 @@ docs/resources/account_setting_user_preference_v2.md linguist-generated=true
 docs/resources/account_setting_v2.md linguist-generated=true
 docs/resources/alert_v2.md linguist-generated=true
 docs/resources/apps_settings_custom_template.md linguist-generated=true
+docs/resources/apps_space.md linguist-generated=true
 docs/resources/budget_policy.md linguist-generated=true
 docs/resources/data_quality_monitor.md linguist-generated=true
 docs/resources/data_quality_refresh.md linguist-generated=true
 docs/resources/database_database_catalog.md linguist-generated=true
 docs/resources/database_instance.md linguist-generated=true
 docs/resources/database_synced_database_table.md linguist-generated=true
+docs/resources/endpoint.md linguist-generated=true
 docs/resources/entity_tag_assignment.md linguist-generated=true
 docs/resources/external_metadata.md linguist-generated=true
 docs/resources/feature_engineering_feature.md linguist-generated=true
@@ -122,6 +128,9 @@ internal/providers/pluginfw/products/alert_v2/resource_alert_v2.go linguist-gene
 internal/providers/pluginfw/products/apps_settings_custom_template/data_apps_settings_custom_template.go linguist-generated=true
 internal/providers/pluginfw/products/apps_settings_custom_template/data_apps_settings_custom_templates.go linguist-generated=true
 internal/providers/pluginfw/products/apps_settings_custom_template/resource_apps_settings_custom_template.go linguist-generated=true
+internal/providers/pluginfw/products/apps_space/data_apps_space.go linguist-generated=true
+internal/providers/pluginfw/products/apps_space/data_apps_spaces.go linguist-generated=true
+internal/providers/pluginfw/products/apps_space/resource_apps_space.go linguist-generated=true
 internal/providers/pluginfw/products/budget_policy/data_budget_policies.go linguist-generated=true
 internal/providers/pluginfw/products/budget_policy/data_budget_policy.go linguist-generated=true
 internal/providers/pluginfw/products/budget_policy/resource_budget_policy.go linguist-generated=true
@@ -140,6 +149,9 @@ internal/providers/pluginfw/products/database_instance/resource_database_instanc
 internal/providers/pluginfw/products/database_synced_database_table/data_database_synced_database_table.go linguist-generated=true
 internal/providers/pluginfw/products/database_synced_database_table/data_database_synced_database_tables.go linguist-generated=true
 internal/providers/pluginfw/products/database_synced_database_table/resource_database_synced_database_table.go linguist-generated=true
+internal/providers/pluginfw/products/endpoint/data_endpoint.go linguist-generated=true
+internal/providers/pluginfw/products/endpoint/data_endpoints.go linguist-generated=true
+internal/providers/pluginfw/products/endpoint/resource_endpoint.go linguist-generated=true
 internal/providers/pluginfw/products/entity_tag_assignment/data_entity_tag_assignment.go linguist-generated=true
 internal/providers/pluginfw/products/entity_tag_assignment/data_entity_tag_assignments.go linguist-generated=true
 internal/providers/pluginfw/products/entity_tag_assignment/resource_entity_tag_assignment.go linguist-generated=true
@@ -245,6 +257,8 @@ internal/service/marketplace_tf/legacy_model.go linguist-generated=true
 internal/service/marketplace_tf/model.go linguist-generated=true
 internal/service/ml_tf/legacy_model.go linguist-generated=true
 internal/service/ml_tf/model.go linguist-generated=true
+internal/service/networking_tf/legacy_model.go linguist-generated=true
+internal/service/networking_tf/model.go linguist-generated=true
 internal/service/oauth2_tf/legacy_model.go linguist-generated=true
 internal/service/oauth2_tf/model.go linguist-generated=true
 internal/service/pipelines_tf/legacy_model.go linguist-generated=true
